--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "morethan-log",
-  "version": "1.3.0",
+  "name": "notion-blog",
+  "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/morethanmin/morethan-log.git"
+    "url": ""
   },
   "scripts": {
     "dev": "next dev",
